--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,25 +1,18 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      docker: latest
-    commands:
-      - echo Installing dependencies
-      - pip install --upgrade pip
-      - pip install -r requirements.txt
   pre_build:
     commands:
-      - echo Logging into Amazon ECR...
+      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 6374-2356-1069.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
+      - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t danswer .
       - docker tag danswer:latest 6374-2356-1069.dkr.ecr.us-east-1.amazonaws.com/danswer:latest
   post_build:
     commands:
+      - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push 6374-2356-1069.dkr.ecr.us-east-1.amazonaws.com/danswer:latest
-
-
