Modify buildspec.yml for CodeBuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,15 +4,16 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 6374-2356-1069.dkr.ecr.us-east-2.amazonaws.com
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 637423561069.dkr.ecr.us-east-2.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t danswer .
-      - docker tag danswer:latest 6374-2356-1069.dkr.ecr.us-east-2.amazonaws.com/danswer:latest
+      - docker build -t via .
+      - docker tag via:latest 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 6374-2356-1069.dkr.ecr.us-east-2.amazonaws.com/danswer:latest
+      - docker push 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
+
