--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,11 +9,11 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t via via/backend
-      - docker tag via:latest 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
+      - cd backend && docker build -t via .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
+      - docker tag via:latest 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
       - docker push 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
 
