--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,23 +1,16 @@
-version: 0.2
+build:
+  commands:
+    - echo Build started on `date`
+    - echo Building the Docker image...
+    - cd backend && docker build -t via .
+post_build:
+  commands:
+    - echo Build completed on `date`
+    - echo Pushing the Docker image...
+    - docker tag via:latest 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
+    - docker push 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
+    - printf '[{"name":"via-container","imageUri":"%s"}]' 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest > imagedefinitions.json
 
-phases:
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 637423561069.dkr.ecr.us-east-2.amazonaws.com
-  build:
-    commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...
-      - cd backend && docker build -t via .
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker image...
-      - docker tag via:latest 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
-      - docker push 637423561069.dkr.ecr.us-east-2.amazonaws.com/via:latest
-      # Generate an output artifact containing task definition name and image URI
-      
 artifacts:
   files:
     - '**/*'
