--- a/appspec.yml
+++ b/appspec.yml
@@ -8,16 +8,16 @@ hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: ec2-user 
+      runas: root 
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ec2-user
+      runas: root 
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
